# SearchCoins

./: Cargo.toml  README.md
src/: EmailSender.rs  HtmlScrapper.rs  ReadInitialData.rs  liberrors.rs  main.rs
test_files/: income_data_test_correct.txt  income_data_test_wrong.txt
