[package]
name = "searchCoins"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
select = "0.5.0"
tokio = {version = "1", features = ["full"]}
futures = "*"
scraper = "0.12.0"
serde_json = "1.0.69"
select-rs = "0.1.2"
chrono = "*"
lettre = "0.9.2"
lettre_email = "0.9.2"


[lib]
name = "liberrors"
path = "src/liberrors.rs"